# StockSync

./: .$StockSync.drawio.bkp  README.md
doc/: Data.txt  ERD.docx  StockSync.drawio  Work Process.docx  authontication flow.docx  how to use the system.docx  testing users.txt  theme.json
stocksunc-backend-ai/: main.py  pyproject.toml
stocksync-backend/: pom.xml
stocksync-backend/src/main/java/server/stocksyncbackend/: StocksyncBackendApplication.java
stocksync-backend/src/main/resources/: application.properties
stocksync-backend/src/main/resources/keys/: private_key.pem  public_key.pem
stocksync-frontend-pc/: package-lock.json  package.json
stocksync-frontend-web/: next.config.ts  package-lock.json  package.json
stocksync-frontend-web/src/app/: globals.css  layout.tsx
stocksync-frontend-web/src/app/(pages)/(protect)/: layout.tsx
stocksync-frontend-web/src/app/(pages)/(protect)/dashboard/: page.tsx
stocksync-frontend-web/src/components/: AppThemeProvider.tsx  AuthGuard.tsx  BakcButton.tsx  ModeToggle.tsx  NavBar.tsx  ThemeToggle.tsx  TosterAlerts.tsx
stocksync-frontend-web/src/components/ui/: button.tsx  dropdown-select.tsx  loader.tsx
stocksync-frontend-web/src/context/: AuthContext.tsx
stocksync-frontend-web/src/data/: NavBarData.ts  navbarRoles.ts  navbarTypes.ts
stocksync-frontend-web/src/hooks/: useAuthGuard.ts
stocksync-frontend-web/src/lib/: axios.ts
stocksync-frontend-web/src/service/: auth.ts  grn.ts  suppliers.ts
stocksync-frontend-web/src/utils/dto/: ErrorResponse.ts
stocksync-frontend-web/src/utils/types/: grn.ts  supplier.ts
(+109 files in other folders)
