[project]
name = "stocksunc-ai-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.12.0",
    "fastapi>=0.124.4",
    "huggingface-hub>=0.36.0",
    "numpy>=2.3.5",
    "pydantic>=2.12.5",
    "transformers>=4.57.3",
    "uvicorn>=0.38.0",
]
